Supuesto fallo en sintaxis sql

--- a/TiendaVideoJuegosV2/App.config
+++ b/TiendaVideoJuegosV2/App.config
@@ -17,8 +17,8 @@
   </runtime>
 	<appSettings>
 		<add key="servidor" value ="192.168.33.70"/>
-		<add key="usuario" value ="fernando"/>
-		<add key="password" value ="1234"/>
+		<add key="usuario" value ="root"/>
+		<add key="password" value ="toor"/>
 		<add key="baseDatos" value ="tiendavideojuegos"/>
 	</appSettings>
 </configuration>
