--- a/TiendaVideoJuegosV2/TiendaVideoJuegosV2.csproj
+++ b/TiendaVideoJuegosV2/TiendaVideoJuegosV2.csproj
@@ -89,6 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Vista\PantallaPrincipal.resx">
+      <DependentUpon>PantallaPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <Compile Include="Vista\PantallaPrincipal.cs">
       <SubType>Form</SubType>
@@ -106,9 +109,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Vista\Form1.resx">
-      <DependentUpon>PantallaPrincipal.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
